--- a/requirements.txt
+++ b/requirements.txt
@@ -1,234 +1,234 @@
-accelerate==1.3.0
-aext-assistant @ file:///C:/b/abs_98xvdek9qa/croot/aext-assistant_1734644152369/work
-aext-assistant-server @ file:///C:/b/abs_93twy7n40b/croot/aext-assistant-server_1734640405857/work
-aext-core @ file:///C:/b/abs_73k82brgp5/croot/aext-core_1734637800697/work
-aext-core-server @ file:///C:/b/abs_e3xgm257mx/croot/aext-core-server_1734635079146/work
-aext-panels @ file:///C:/b/abs_e40tdjfcpq/croot/aext-panels_1734643464834/work
-aext-panels-server @ file:///C:/b/abs_546lo5c36i/croot/aext-panels-server_1734640142498/work
-aext-project-filebrowser-server @ file:///C:/b/abs_11ixe7hbzm/croot/aext-project-filebrowser-server_1734687629540/work/backend_lib/project_filebrowser
-aext-share-notebook @ file:///C:/b/abs_fewa44_d8o/croot/aext-share-notebook_1734642886563/work
-aext-share-notebook-server @ file:///C:/b/abs_3dkdp713ad/croot/aext-share-notebook-server_1734639662890/work
-aext-shared @ file:///C:/b/abs_6bq_wjfbhn/croot/aext-shared_1734628822229/work
-aext-toolbox @ file:///C:/b/abs_8ehb5u9xv_/croot/anaconda-toolbox_1734694573015/work
-aiofiles==23.2.1
-aiohappyeyeballs @ file:///home/conda/feedstock_root/build_artifacts/aiohappyeyeballs_1733331917983/work
-aiohttp @ file:///D:/bld/aiohttp_1734596894871/work
-aiosignal @ file:///home/conda/feedstock_root/build_artifacts/aiosignal_1734342155601/work
-alembic @ file:///C:/b/abs_9dfubpaeyo/croot/alembic_1729532445549/work
-altair==5.5.0
-anaconda-cli-base @ file:///C:/b/abs_10tn0i9q_v/croot/anaconda-cli-base_1731510927919/work
-anaconda-cloud-auth @ file:///C:/b/abs_30636r4zkk/croot/anaconda-cloud-auth_1731440286098/work
-annotated-types @ file:///C:/b/abs_0dmaoyhhj3/croot/annotated-types_1709542968311/work
-anyio @ file:///C:/b/abs_31grv7a7bl/croot/anyio_1729121290992/work
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///C:/b/abs_f11axiliot/croot/argon2-cffi-bindings_1736182463870/work
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-async-lru @ file:///C:/b/abs_e0hjkvwwb5/croot/async-lru_1699554572212/work
-async-timeout @ file:///home/conda/feedstock_root/build_artifacts/async-timeout_1691763562544/work
-asyncer==0.0.8
-attrdict==2.0.1
-attrs @ file:///C:/b/abs_89hmquz5ga/croot/attrs_1734533130810/work
-autogen==0.7.2
-babel @ file:///C:/b/abs_ffzt1bmjth/croot/babel_1737454394148/work
-beautifulsoup4 @ file:///C:/b/abs_d5wytg_p0w/croot/beautifulsoup4-split_1718029833749/work
-bleach @ file:///C:/b/abs_925i9psm3u/croot/bleach_1732292896852/work
-blinker==1.9.0
-bokeh @ file:///C:/b/abs_b40zi4jp_s/croot/bokeh_1727914495891/work
-Bottleneck @ file:///C:/b/abs_816hr2khp1/croot/bottleneck_1731058648110/work
-Brotli @ file:///C:/b/abs_c415aux9ra/croot/brotli-split_1736182803933/work
-cachetools==5.5.2
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1734380492396/work/certifi
-cffi @ file:///C:/b/abs_29_b57if3f/croot/cffi_1736184144340/work
-charset-normalizer==3.4.1
-click @ file:///C:/b/abs_f9ihnt72pu/croot/click_1698129847492/work
-colorama==0.4.6
-comm @ file:///C:/b/abs_67a8058udb/croot/comm_1709322909844/work
-contourpy @ file:///C:/b/abs_f2u2o_8s9g/croot/contourpy_1732540071787/work
-cryptography @ file:///C:/b/abs_e2lzchf4i6/croot/cryptography_1732130411942/work
-dataclasses-json==0.6.7
-debugpy @ file:///C:/b/abs_bf9oo2vhxp/croot/debugpy_1736269476451/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-diskcache==5.6.3
-distro==1.9.0
-docker==7.1.0
-einops==0.8.0
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fast-depends==2.4.12
-fastapi==0.115.7
-fastjsonschema @ file:///C:/b/abs_4ev90296ly/croot/python-fastjsonschema_1731939386416/work
-ffmpy==0.5.0
-filelock==3.17.0
-frozenlist @ file:///D:/bld/frozenlist_1737645258591/work
-fsspec==2024.12.0
-gitdb==4.0.12
-GitPython==3.1.44
-gradio==5.13.2
-gradio_client==1.6.0
-greenlet @ file:///C:/b/abs_bbl_18a2tm/croot/greenlet_1733860081977/work
-h11 @ file:///C:/b/abs_1czwoyexjf/croot/h11_1706652332846/work
-httpcore @ file:///C:/b/abs_55n7g233bw/croot/httpcore_1706728507241/work
-httpx @ file:///C:/b/abs_43e135shby/croot/httpx_1723474830126/work
-httpx-sse==0.4.0
-huggingface-hub==0.28.0
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1733211830134/work
-importlib_metadata @ file:///C:/b/abs_9d0lp1ysmt/croot/importlib_metadata-suite_1732633510972/work
-ipykernel @ file:///C:/b/abs_5etv6sld_j/croot/ipykernel_1728665608850/work
-ipython @ file:///C:/b/abs_8eyhzleyrk/croot/ipython_1734548134403/work
--e git+https://github.com/deepseek-ai/Janus.git@a74a59f8a9084b78c7760c955037503b9b55b862#egg=janus
-jaraco.classes @ file:///tmp/build/80754af9/jaraco.classes_1620983179379/work
-jedi @ file:///C:/b/abs_3a2kbnlclc/croot/jedi_1733987412687/work
-Jinja2==3.1.5
-jiter==0.8.2
-json5 @ file:///C:/b/abs_743lprxrv5/croot/json5_1730786818336/work
-jsonpatch @ file:///home/conda/feedstock_root/build_artifacts/jsonpatch_1733814567314/work
-jsonpointer @ file:///D:/bld/jsonpointer_1725302960531/work
-jsonschema @ file:///C:/b/abs_394_t6__xq/croot/jsonschema_1728486718320/work
-jsonschema-specifications @ file:///C:/b/abs_0brvm6vryw/croot/jsonschema-specifications_1699032417323/work
-jupyter-events @ file:///C:/b/abs_c2m9s5b5m5/croot/jupyter_events_1718738115254/work
-jupyter-lsp @ file:///C:/b/abs_ecle3em9d4/croot/jupyter-lsp-meta_1699978291372/work
-jupyter_client @ file:///C:/b/abs_149bw133if/croot/jupyter_client_1737570986926/work
-jupyter_core @ file:///C:/b/abs_beftpbuevw/croot/jupyter_core_1718818307097/work
-jupyter_server @ file:///C:/b/abs_9a333nh6yu/croot/jupyter_server_1718827092223/work
-jupyter_server_terminals @ file:///C:/b/abs_ec0dq4b50j/croot/jupyter_server_terminals_1686870763512/work
-jupyterlab @ file:///C:/b/abs_adgv7wgabm/croot/jupyterlab_1737555444636/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab_server @ file:///C:/b/abs_fdi5r_tpjc/croot/jupyterlab_server_1725865372811/work
-keyring @ file:///C:/b/abs_78uoj9sw00/croot/keyring_1709632550180/work
-langchain==0.3.16
-langchain-community==0.3.16
-langchain-core==0.3.32
-langchain-deepseek-official==0.1.0
-langchain-openai==0.3.2
-langchain-text-splitters @ file:///home/conda/feedstock_root/build_artifacts/langchain-text-splitters_1736285587843/work
-langsmith @ file:///home/conda/feedstock_root/build_artifacts/langsmith_1737099297406/work
-linkify-it-py @ file:///C:/ci_311/linkify-it-py_1676474436187/work
-Mako @ file:///C:/ci_311/mako_1676442613377/work
-Markdown @ file:///C:/ci_311/markdown_1676437912393/work
-markdown-it-py @ file:///C:/b/abs_a5bfngz6fu/croot/markdown-it-py_1684279915556/work
-MarkupSafe==3.0.2
-marshmallow==3.26.0
-matplotlib-inline @ file:///C:/ci_311/matplotlib-inline_1676425798036/work
-mdit-py-plugins @ file:///C:/ci_311/mdit-py-plugins_1676481827414/work
-mdurl @ file:///C:/ci_311/mdurl_1676442676678/work
-mistune @ file:///C:/ci_311/mistune_1676425111783/work
-mkl-service==2.4.0
-mkl_fft @ file:///C:/Users/dev-admin/mkl/mkl_fft_1730823082242/work
-mkl_random @ file:///C:/Users/dev-admin/mkl/mkl_random_1730822522280/work
-more-itertools @ file:///C:/b/abs_a2n4mhb8gn/croot/more-itertools_1727185463826/work
-mpmath==1.3.0
-multidict @ file:///D:/bld/multidict_1729065636540/work
-mypy-extensions==1.0.0
-narwhals==1.27.1
-nb_conda_kernels @ file:///C:/b/abs_7cuhlf_8l_/croot/nb_conda_kernels_1730822308979/work
-nbclient @ file:///C:/b/abs_cal0q5fyju/croot/nbclient_1698934263135/work
-nbconvert @ file:///C:/b/abs_ac6qnzi3no/croot/nbconvert_1728050663985/work
-nbformat @ file:///C:/b/abs_c2jkw46etm/croot/nbformat_1728050303821/work
-nest-asyncio @ file:///C:/b/abs_65d6lblmoi/croot/nest-asyncio_1708532721305/work
-networkx==3.4.2
-notebook @ file:///C:/b/abs_26737osg4x/croot/notebook_1700582146311/work
-notebook_shim @ file:///C:/b/abs_a5xysln3lb/croot/notebook-shim_1699455926920/work
-numexpr @ file:///C:/b/abs_05o8p7bfml/croot/numexpr_1730215959182/work
-numpy @ file:///D:/bld/numpy_1707225528937/work/dist/numpy-1.26.4-cp311-cp311-win_amd64.whl#sha256=537f0573fefb1e93b3633e8a79102e6b6d2911e09e0a90008993efef4242448e
-ollama==0.4.7
-openai==1.60.1
-orjson @ file:///D:/bld/orjson_1737229069192/work
-overrides @ file:///C:/b/abs_cfh89c8yf4/croot/overrides_1699371165349/work
-packaging==24.2
-pandas @ file:///C:/b/abs_e18w9ay4we/croot/pandas_1732735115740/work/dist/pandas-2.2.3-cp311-cp311-win_amd64.whl#sha256=3a9ed5b5006a5fad640788cd8385485f98b18ac6ff9294cb25b18f3931fed352
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-panel @ file:///C:/b/abs_82q5xldm68/croot/panel_1730380827833/work
-param @ file:///C:/b/abs_947gg_me2k/croot/param_1734618628313/work
-parso @ file:///C:/b/abs_834b4mj92b/croot/parso_1733963322289/work
-pillow @ file:///C:/b/abs_56j2irkr90/croot/pillow_1734430606717/work
-pkce @ file:///C:/b/abs_d0z4444tb0/croot/pkce_1690384879799/work
-platformdirs @ file:///C:/b/abs_b6z_yqw_ii/croot/platformdirs_1692205479426/work
-prometheus_client @ file:///C:/b/abs_e7l07zkc4b/croot/prometheus_client_1731961599071/work
-prompt-toolkit @ file:///C:/b/abs_68uwr58ed1/croot/prompt-toolkit_1704404394082/work
-propcache @ file:///D:/bld/propcache_1737635564183/work
-protobuf==5.29.3
-psutil @ file:///C:/b/abs_b5gv3mn55h/croot/psutil_1736371546320/work
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pyarrow==19.0.1
-pyautogen==0.7.2
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydantic @ file:///C:/b/abs_27dx58x550/croot/pydantic_1734736090499/work
-pydantic-settings @ file:///C:/b/abs_fe1okp6jbe/croot/pydantic-settings_1730800848545/work
-pydantic_core @ file:///C:/b/abs_bdosz7qwys/croot/pydantic-core_1734726071532/work
-pydeck==0.9.1
-pydub==0.25.1
-pygame==2.6.1
-Pygments @ file:///C:/b/abs_fay9dpq4n_/croot/pygments_1684279990574/work
-PyJWT @ file:///C:/b/abs_02n5wes3j9/croot/pyjwt_1736178904450/work
-PySocks @ file:///C:/ci_311/pysocks_1676425991111/work
-python-dateutil @ file:///C:/b/abs_3au_koqnbs/croot/python-dateutil_1716495777160/work
-python-dotenv @ file:///C:/ci_311/python-dotenv_1676455170580/work
-python-json-logger @ file:///C:/b/abs_0cm_mnox0z/croot/python-json-logger_1734370042436/work
-python-multipart==0.0.20
-pytz @ file:///C:/b/abs_6ap4tsz1ox/croot/pytz_1713974360290/work
-pyviz_comms @ file:///C:/b/abs_674gfmqoxa/croot/pyviz_comms_1711136872853/work
-pywin32==308
-pywin32-ctypes @ file:///C:/b/abs_2cfx5l4nvi/croot/pywin32-ctypes_1709340246092/work
-pywinpty @ file:///C:/b/abs_6696uz5mru/croot/pywinpty_1733514639618/work
-PyYAML==6.0.2
-pyzmq @ file:///C:/b/abs_f3yte6j5yn/croot/pyzmq_1734711069724/work
-readchar @ file:///C:/b/abs_13mawdx1fr/croot/readchar_1697462745604/work
-referencing @ file:///C:/b/abs_09f4hj6adf/croot/referencing_1699012097448/work
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt @ file:///home/conda/feedstock_root/build_artifacts/requests-toolbelt_1733734787568/work
-rfc3339-validator @ file:///C:/b/abs_ddfmseb_vm/croot/rfc3339-validator_1683077054906/work
-rfc3986-validator @ file:///C:/b/abs_6e9azihr8o/croot/rfc3986-validator_1683059049737/work
-rich @ file:///C:/b/abs_8b92fzmygg/croot/rich_1732638991774/work
-rpds-py @ file:///C:/b/abs_0c6z5kcdb6/croot/rpds-py_1736545465023/work
-ruff==0.9.3
-safehttpx==0.1.6
-safetensors==0.5.2
-semantic-version==2.10.0
-semver @ file:///C:/b/abs_6bgol0at6h/croot/semver_1736542515243/work
-Send2Trash @ file:///C:/b/abs_7e73ol18dl/croot/send2trash_1736542724140/work
-sentencepiece==0.2.0
-sentry-sdk @ file:///C:/b/abs_03mwb6wi8k/croot/sentry-sdk_1732198189303/work
-shellingham @ file:///C:/ci_311/shellingham_1676431367488/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-smmap==5.0.2
-sniffio @ file:///C:/b/abs_3akdewudo_/croot/sniffio_1705431337396/work
-soupsieve @ file:///C:/b/abs_bbsvy9t4pl/croot/soupsieve_1696347611357/work
-SQLAlchemy @ file:///C:/b/abs_1au3ykwdxx/croot/sqlalchemy_1736565056929/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-starlette==0.45.3
-streamlit==1.42.2
-sympy==1.13.1
-tenacity @ file:///home/conda/feedstock_root/build_artifacts/tenacity_1733649050774/work
-termcolor==2.5.0
-terminado @ file:///C:/ci_311/terminado_1678228513830/work
-tiktoken==0.8.0
-timm==1.0.14
-tinycss2 @ file:///C:/ci_311/tinycss2_1676425376744/work
-tokenizers==0.21.0
-toml==0.10.2
-tomlkit==0.13.2
-torch==2.6.0
-torchaudio==2.5.1
-torchvision==0.21.0
-tornado @ file:///C:/b/abs_7cyu943ybx/croot/tornado_1733960510898/work
-tqdm==4.67.1
-traitlets @ file:///C:/b/abs_bfsnoxl4pq/croot/traitlets_1718227069245/work
-transformers==4.48.2
-typer==0.15.1
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-uc-micro-py @ file:///C:/ci_311/uc-micro-py_1676457695423/work
-urllib3==2.3.0
-uvicorn==0.34.0
-watchdog @ file:///C:/b/abs_b3l_3s276z/croot/watchdog_1717166538403/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-websocket-client @ file:///C:/b/abs_5dmnxxoci9/croot/websocket-client_1715878351319/work
-websockets==14.2
-win-inet-pton @ file:///C:/ci_311/win_inet_pton_1676425458225/work
-xyzservices @ file:///C:/ci_311/xyzservices_1676434829315/work
-yarl @ file:///D:/bld/yarl_1737575828275/work
-zipp @ file:///C:/b/abs_2fcpcg89my/croot/zipp_1732630746332/work
-zstandard==0.23.0
+accelerate  
+aext-assistant  
+aext-assistant-server  
+aext-core  
+aext-core-server  
+aext-panels  
+aext-panels-server  
+aext-project-filebrowser-server  
+aext-share-notebook  
+aext-share-notebook-server  
+aext-shared  
+aext-toolbox  
+aiofiles  
+aiohappyeyeballs  
+aiohttp  
+aiosignal  
+alembic  
+altair  
+anaconda-cli-base  
+anaconda-cloud-auth  
+annotated-types  
+anyio  
+argon2-cffi  
+argon2-cffi-bindings  
+asttokens  
+async-lru  
+async-timeout  
+asyncer  
+attrdict  
+attrs  
+autogen  
+babel  
+beautifulsoup4  
+bleach  
+blinker  
+bokeh  
+Bottleneck  
+Brotli  
+cachetools  
+certifi  
+cffi  
+charset-normalizer  
+click  
+colorama  
+comm  
+contourpy  
+cryptography  
+dataclasses-json  
+debugpy  
+decorator  
+defusedxml  
+diskcache  
+distro  
+docker  
+einops  
+executing  
+fast-depends  
+fastapi  
+fastjsonschema  
+ffmpy  
+filelock  
+frozenlist  
+fsspec  
+gitdb  
+GitPython  
+gradio  
+gradio_client  
+greenlet  
+h11  
+httpcore  
+httpx  
+httpx-sse  
+huggingface-hub  
+idna  
+importlib_metadata  
+ipykernel  
+ipython  
+janus  
+jaraco.classes  
+jedi  
+Jinja2  
+jiter  
+json5  
+jsonpatch  
+jsonpointer  
+jsonschema  
+jsonschema-specifications  
+jupyter-events  
+jupyter-lsp  
+jupyter_client  
+jupyter_core  
+jupyter_server  
+jupyter_server_terminals  
+jupyterlab  
+jupyterlab-pygments  
+jupyterlab_server  
+keyring  
+langchain  
+langchain-community  
+langchain-core  
+langchain-deepseek-official  
+langchain-openai  
+langchain-text-splitters  
+langsmith  
+linkify-it-py  
+Mako  
+Markdown  
+markdown-it-py  
+MarkupSafe  
+marshmallow  
+matplotlib-inline  
+mdit-py-plugins  
+mdurl  
+mistune  
+mkl-service  
+mkl_fft  
+mkl_random  
+more-itertools  
+mpmath  
+multidict  
+mypy-extensions  
+narwhals  
+nb_conda_kernels  
+nbclient  
+nbconvert  
+nbformat  
+nest-asyncio  
+networkx  
+notebook  
+notebook_shim  
+numexpr  
+numpy  
+ollama  
+openai  
+orjson  
+overrides  
+packaging  
+pandas  
+pandocfilters  
+panel  
+param  
+parso  
+pillow  
+pkce  
+platformdirs  
+prometheus_client  
+prompt-toolkit  
+propcache  
+protobuf  
+psutil  
+pure-eval  
+pyarrow  
+pyautogen  
+pycparser  
+pydantic  
+pydantic-settings  
+pydantic_core  
+pydeck  
+pydub  
+pygame  
+Pygments  
+PyJWT  
+PySocks  
+python-dateutil  
+python-dotenv  
+python-json-logger  
+python-multipart  
+pytz  
+pyviz_comms  
+pywin32  
+pywin32-ctypes  
+pywinpty  
+PyYAML  
+pyzmq  
+readchar  
+referencing  
+regex  
+requests  
+requests-toolbelt  
+rfc3339-validator  
+rfc3986-validator  
+rich  
+rpds-py  
+ruff  
+safehttpx  
+safetensors  
+semantic-version  
+semver  
+Send2Trash  
+sentencepiece  
+sentry-sdk  
+shellingham  
+six  
+smmap  
+sniffio  
+soupsieve  
+SQLAlchemy  
+stack-data  
+starlette  
+streamlit  
+sympy  
+tenacity  
+termcolor  
+terminado  
+tiktoken  
+timm  
+tinycss2  
+tokenizers  
+toml  
+tomlkit  
+torch  
+torchaudio  
+torchvision  
+tornado  
+tqdm  
+traitlets  
+transformers  
+typer  
+typing-inspect  
+typing_extensions  
+tzdata  
+uc-micro-py  
+urllib3  
+uvicorn  
+watchdog  
+wcwidth  
+webencodings  
+websocket-client  
+websockets  
+win-inet-pton  
+xyzservices  
+yarl  
+zipp  
+zstandard  
