--- a/requirements.txt
+++ b/requirements.txt
@@ -1,234 +1,9 @@
-accelerate  
-aext-assistant  
-aext-assistant-server  
-aext-core  
-aext-core-server  
-aext-panels  
-aext-panels-server  
-aext-project-filebrowser-server  
-aext-share-notebook  
-aext-share-notebook-server  
-aext-shared  
-aext-toolbox  
-aiofiles  
-aiohappyeyeballs  
-aiohttp  
-aiosignal  
-alembic  
-altair  
-anaconda-cli-base  
-anaconda-cloud-auth  
-annotated-types  
-anyio  
-argon2-cffi  
-argon2-cffi-bindings  
-asttokens  
-async-lru  
-async-timeout  
-asyncer  
-attrdict  
-attrs  
-autogen  
-babel  
-beautifulsoup4  
-bleach  
-blinker  
-bokeh  
-Bottleneck  
-Brotli  
-cachetools  
-certifi  
-cffi  
-charset-normalizer  
-click  
-colorama  
-comm  
-contourpy  
-cryptography  
-dataclasses-json  
-debugpy  
-decorator  
-defusedxml  
-diskcache  
-distro  
-docker  
-einops  
-executing  
-fast-depends  
-fastapi  
-fastjsonschema  
-ffmpy  
-filelock  
-frozenlist  
-fsspec  
-gitdb  
-GitPython  
-gradio  
-gradio_client  
-greenlet  
-h11  
-httpcore  
-httpx  
-httpx-sse  
-huggingface-hub  
-idna  
-importlib_metadata  
-ipykernel  
-ipython  
-janus  
-jaraco.classes  
-jedi  
-Jinja2  
-jiter  
-json5  
-jsonpatch  
-jsonpointer  
-jsonschema  
-jsonschema-specifications  
-jupyter-events  
-jupyter-lsp  
-jupyter_client  
-jupyter_core  
-jupyter_server  
-jupyter_server_terminals  
-jupyterlab  
-jupyterlab-pygments  
-jupyterlab_server  
-keyring  
-langchain  
-langchain-community  
-langchain-core  
-langchain-deepseek-official  
-langchain-openai  
-langchain-text-splitters  
-langsmith  
-linkify-it-py  
-Mako  
-Markdown  
-markdown-it-py  
-MarkupSafe  
-marshmallow  
-matplotlib-inline  
-mdit-py-plugins  
-mdurl  
-mistune  
-mkl-service  
-mkl_fft  
-mkl_random  
-more-itertools  
-mpmath  
-multidict  
-mypy-extensions  
-narwhals  
-nb_conda_kernels  
-nbclient  
-nbconvert  
-nbformat  
-nest-asyncio  
-networkx  
-notebook  
-notebook_shim  
-numexpr  
-numpy  
-ollama  
-openai  
-orjson  
-overrides  
-packaging  
-pandas  
-pandocfilters  
-panel  
-param  
-parso  
-pillow  
-pkce  
-platformdirs  
-prometheus_client  
-prompt-toolkit  
-propcache  
-protobuf  
-psutil  
-pure-eval  
-pyarrow  
-pyautogen  
-pycparser  
-pydantic  
-pydantic-settings  
-pydantic_core  
-pydeck  
-pydub  
-pygame  
-Pygments  
-PyJWT  
-PySocks  
-python-dateutil  
-python-dotenv  
-python-json-logger  
-python-multipart  
-pytz  
-pyviz_comms  
-pywin32  
-pywin32-ctypes  
-pywinpty  
-PyYAML  
-pyzmq  
-readchar  
-referencing  
-regex  
-requests  
-requests-toolbelt  
-rfc3339-validator  
-rfc3986-validator  
-rich  
-rpds-py  
-ruff  
-safehttpx  
-safetensors  
-semantic-version  
-semver  
-Send2Trash  
-sentencepiece  
-sentry-sdk  
-shellingham  
-six  
-smmap  
-sniffio  
-soupsieve  
-SQLAlchemy  
-stack-data  
-starlette  
-streamlit  
-sympy  
-tenacity  
-termcolor  
-terminado  
-tiktoken  
-timm  
-tinycss2  
-tokenizers  
-toml  
-tomlkit  
-torch  
-torchaudio  
-torchvision  
-tornado  
-tqdm  
-traitlets  
-transformers  
-typer  
-typing-inspect  
-typing_extensions  
-tzdata  
-uc-micro-py  
-urllib3  
-uvicorn  
-watchdog  
-wcwidth  
-webencodings  
-websocket-client  
-websockets  
-win-inet-pton  
-xyzservices  
-yarl  
-zipp  
-zstandard  
+streamlit
+langchain
+langchain-community
+ollama
+lanchain_core
+python-dotenv
+langserve
+fastapi
+uvicorn
